<resources>
    <string name="app_name">"Casinò di Venezia "</string>
    <string name="action_settings">Settings</string>
    <string name="cavendramin">CÀ VENDRAMIN CALERGI</string>
    <string name="apertodalle">OPEN FROM xx:x TO xx:xx</string>
    <string name="jackpotamount">x.xxx.xxx,xx €</string>
    <string name="jackpot">JACKPOT</string>
    <string name="link">UNDER 18 ARE NOT ALLOWED TO GAMBLE. GAMBLING CAN BE PATHOLOGICALLY ADDICTIVE.<a href="http://www.casinovenezia.it/en/probability-winning.html">GO TO PROBABILITY OF WINNING</a></string>
    <string name="action_change"></string>
    <string name="home_label">HOME</string>
    <string name="events_label">EVENTS</string>
    <string name="casino_label">CASINÒ</string>
    <string name="poker_label">POKER</string>
    <string name="tournament_label">TOURNAMENTS</string>
    <string name="restaurant_label">RESTAURANT</string>
    <string name="map_label">MAP</string>
    <string-array name="nav_drawer_items">
        <item>HOME</item>
        <item>LOG IN</item>
        <item>NEWSLETTER</item>
        <item>TIMETABLES</item>
        <item>CASINÒ MOBILE</item>
        <item>MY SUBSCRIPTION</item>
        <item>CLICK "LIKE" ON FACEBOOK</item>
        <item></item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="please">PLEASE LOGIN OR SIGN UP</string>
    <string name="loginsignup">LOG IN / SIGN UP</string>
    <string name="newsletter">NEWSLETTER</string>
    <string name="email_nl">EMAIL</string>
    <string name="name_nl">NAME</string>
    <string name="surname_nl">SURNAME</string>
    <string name="willing">Yes, I am willing to receive the Venice Casino Newsletter at the address shown above.</string>
    <string name="confirm">I confirm that I am 18 years of age or older.</string>
    <string name="allow">To allow the requested service, I consent to the processing of my personal data in accordance with Legislative Decree 196/2003.</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="click">LIKE US ON FACEBOOK AND GET YOUR FREE ENTRY!</string>
    <string name="ingresso">ENTRY ALLOWED TO ADULTS OVER THE AGE OF EIGHTEEN. ONLY ON PRESENTATION OF A VALID PHOTO IDENTITY CARD.</string>
    <string name="facebook">YOUR FREE ENTRY</string>
    <string name="mysubscription">MY SUBSCRIPTION</string>
    <string name="eventsnew">EVENTS NEWS</string>
    <string name="slotnews">SLOT NEWS</string>
    <string name="pokernews">POKER NEWS</string>
    <string name="title_activity_event_details">Event</string>
    <string name="lore">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="table_games">TABLE GAMES</string>
    <string name="slot_games">ELETRONIC GAMES</string>
    <string name="online_games">ONLINE GAMES</string>
    <string name="fair">FAIR ROULETTE</string>
    <string name="black">BLACK JACK</string>
    <string name="texas">TEXAS HOLD\'EM POKER</string>
    <string name="punto">PUNTO BANCO</string>
    <string name="carribean">CARRIBEAN STUD POKER</string>
    <string name="francese">FRENCH ROULETTE</string>
    <string name="chemin">CHEMIN DE FER</string>
    <string name="trente">MIDI TRENTE ET QUARANTE</string>
    <string name="what">WHAT WE OFFER</string>
    <string name="whatnew">WHAT\'S NEW</string>
    <string name="rooms">SLOT MACHINE ROOMS</string>
    <string name="jackpot_slot">OUR JACKPOTS</string>
    <string name="title_activity_game_item">GAME</string>
    <string name="close_rule">CLOSE</string>
    <string name="title_activity_slot_details">SLOT</string>
    <string name="text_for_game_general">Experiencing the pleasure of gambling and of the challenge in a refined and intriguing location. This is what the Casinò di Venezia’s two venues have to offer, each complete, but with their own unique character.\n\nAnd you can play online from your own home.</string>
    <string name="title_activity_poker_item">POKER</string>
    <string name="text_for_game_general_poker">The Casinò di Venezia provides opportunities for taking part in national and international competitions.\nThe venue at Ca\' Vendramin Calergi, for example,
        stages the Italian Chemin de Fer Championships (12 rounds a year), the prize winning contests of Chemin de Fer (6 galas a year) and French Roulette tournaments (5 matches a year).\n\nCa\' Noghera, on the other hand,
        stages Texas Hold \’em Poker tournaments every day with online qualifications.\nIn both venues, moreover, it is possible to take part in the Texas Hold \’em Poker international championships that take place regularly at least once a month.</string>
    <string name="torneo">TORNEO</string>
    <string name="ora">Ora</string>
    <string name="buy">BUY IN</string>
    <string name="stack">STACK</string>
    <string name="blind">BLINDS</string>
    <string name="late">LATE</string>
    <string name="cap">CAP</string>
    <string name="note">NOTE</string>
    <string name="text_for_game_general_tournament">The Casinò di Venezia provides opportunities for taking part in national and international competitions.\nThe venue at Ca\' Vendramin Calergi, for example,
        stages the Italian Chemin de Fer Championships (12 rounds a year), the prize winning contests of Chemin de Fer (6 galas a year) and French Roulette tournaments (5 matches a year).\n\nCa\' Noghera, on the other hand,
        stages Texas Hold \’em Poker tournaments every day with online qualifications.\nIn both venues, moreover, it is possible to take part in the Texas Hold \’em Poker international championships that take place regularly at least once a month.</string>
    <string name="title_activity_tournament_item">TOURNAMENT</string>
    <string name="telUno">+390415297230 (from 9.30 am - 5.30 pm)</string>
    <string name="telDue">+390415297201 (7.30 pm - midnight)</string>
    <string name="openingtime">Opening times:</string>
    <string name="openingtimeTx">7.30 pm - midnight</string>
    <string name="closed">Closed:</string>
    <string name="closedTx">December 24 and 25</string>
    <string name="creditCardLabel">Credit cards</string>
    <string name="fromtoMenu">from 26 to 5 march 2015</string>
    <string name="nome_chef">VALERIO VERGINE</string>
    <string name="title_activity_menu">MENU</string>
    <string name="starters">Starters</string>
    <string name="first">First Course</string>
    <string name="second">Second Course</string>
    <string name="dessert">Dessert</string>
    <string name="orari">TIMETABLES</string>
    <string name="map">MAP</string>
    <string name="info_map">INFO</string>
    <string name="directions">(click on icons to get directions)</string>
    <string formatted="false" name="info_text">With the exception of December 24 and 25 the Casinò di Venezia\’s two venues, Ca\’ Vendramin Calergi and Ca\’ Noghera are open all year round.\n
        Access to the Casinò di Venezia\’s games rooms is restricted to adults only who are in possession of a valid ID document:\n\nacceptable forms of identification include either an ID Card,
        a driving licence or a passport.\n\n€5.00 Admission Card (services excluded);\n€10.00 Admission Card: a €10 admission.\n\nThe €10.00 Admission Card includes services:\n-
        The gift of a non convertible chip or ez-pay ticket worth € 10.00 for use at the gaming tables or on the slot machines;\n- cloakroom;\n- parking (at Ca\' Noghera it\'s free of charge;
        in Venice there is a 50% discount at the ASM and Garage San Marco from Monday to Friday, but Sundays, public holidays and the day before these are excluded);\n- road shuttle service:
        Casinò di Ca\' Noghera - Venice Piazzale Roma and vice versa;\n- road shuttle service: Mestre Railway Station –Ca\’ Noghera Casino and vice versa;\n-
        waterways shuttle service: Piazzale Roma - Ca\' Vendramin Calergi and vice versa.\n\nIf you are staying in a hotel in Venice why not ask for a Free Entry Coupon.\n\n
        There\’s a gift waiting for everyone who comes to gamble at the Casino on their birthday.\n\nThere are lots of different promotions and special occasions every month for organising a
        visit to our two venues. Gifts from the Casinò di Venezia\’s own branded collections. An offer of drinks &amp; snacks, gambling benefits with slot machine tickets or gaming table chips,
        free.\nFind out about the promotion of the month.\n\n\nMETHODS OF PAYMENT\n\nFor the purchase of means of gambling, we accept:\n- payment in Italian or foreign currency, up to the maximum
        limit prescribed by current legislation (during the gambling at tables opening times)\n- payment with the following forms of credit cards: Pagobancomat Cash card; Visa; MasterCard, Maestro,
        China Union Pay.\nPayment of gambling credits or winnings can be made in cash, within the limits prescribed by law, with non-transferable cheques made payable to the client or in the form
        of a means of gambling.\n\nEach of the Casinò di Venezia\’s venues has cashier and POS/credit card and cash card banking service points.\n\nThe use of cash\nLegislative Decree No. 201 of
        December 06 2013, published in the Official Gazette (No. 284 of December 06 2011) placed a limit on the use of ready cash for any transactions. As a result of this, therefore,
        the transfer of cash to and from clients within the gaming house can only be for amounts of less than €1000.00.</string>
    <string name="info_titolo">WAYS OF GAINING ADMISSION TO THE CASINO</string>
    <string name="info_activiy_text">INFO</string>
    <string name="title_activity_sign_up">Sign Up/Log In</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_name">enter a name</string>
    <string name="error_blank_surname">enter a surname</string>
    <string name="error_blank_username">enter an email</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">FORGOT ?</string>
    <string name="you_can">YOU CAN LOG IN WITH</string>
    <string name="parse_app_id">yO3MBzW9liNCaiAfXWGb3NtZJ3VhXyy4Zh8rR5ck</string>
    <string name="parse_client_key">KImYuYCrJ9j3IbDI3W2KtDXCXwmfqsRDCn5Em6A9</string>
    <string name="facebook_app_id">724548800932026</string>
</resources>