<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/torneo"
            android:id="@+id/textTorneo"
            android:background="@drawable/poker_cell_bg_grey"
            android:textColor="@color/black"
            android:paddingLeft="5dp"
            android:paddingTop="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/ora"
            android:id="@+id/textOra"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/buy"
            android:id="@+id/textBuy"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/stack"
            android:id="@+id/textStack"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/blind"
            android:id="@+id/textBlind"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/late"
            android:id="@+id/textLate"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/cap"
            android:id="@+id/textCap"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/note"
            android:id="@+id/textNote"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="New Text"
            android:id="@+id/textNameTorneo"
            android:background="@drawable/poker_cell_bg_grey"
            android:textColor="@color/black"
            android:paddingLeft="5dp"
            android:paddingTop="2dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/ora"
            android:id="@+id/textOraV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/buy"
            android:id="@+id/textBuyV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/stack"
            android:id="@+id/textStackV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/blind"
            android:id="@+id/textBlindV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/late"
            android:id="@+id/textLateV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/cap"
            android:id="@+id/textCapV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/note"
            android:id="@+id/textNoteV"
            android:paddingLeft="5dp"
            android:background="@drawable/poker_cell_bg_black"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>